scss/proofs.scss
/* ... */
/* The step has other steps that depend on it.
   In effect this is the disabled version of the button. */
.proofDisplay.editable .proofStep.hover.hasUsers .deleteStep {
  visibility: visible;
  background-color: white;
  color: silver;
}

/* Rule name and information about rule arguments. */
.proofStep .stepInfo {
  display: block;
    white-space: normal;
    // For both editor and plain display, the left margins are
    // approximate.  For more accurate indentation, move the
    // stepInfo inside the wffBlock.
    margin-left: 3em;
    font-family: "Roboto Flex", sans-serif;
    font-size: 85%;
    color: #777;
}

// If editable, increase the margin since the controls are on the left.
.proofDisplay.editable .proofStep .stepInfo {
  margin-left: 6em;
}

// The extra margin applies only to top-level proof steps.
.proofDisplay.editable .inferenceDisplay .proofStep .stepInfo {
  margin-left: 3em;
}

/* Fact or term within a step description */
.proofStep .term {
    font-family: StixGeneral, times;
}

.proofStep .stepNumArea {
  vertical-align: top;
    border: 1px solid transparent;
    margin-right: 5px;
    position: relative;
}

/* Expression in a proof step display, and step numbers */
/* The .fullExpr here would be .expr if we wanted to highlight
   all expr nodes. */
span.stepNumber, span.stepReference {
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
}

/* Highlighting of parts of proof steps */

/* The "site" and "new" clases are transient,
   so they override "unsolved". */
/* Step number area of step used by hovered step */
.proofStep.dep .stepNumArea,
/* A "site" input of a proof step */
.proofStep .expr.site, .proofStep .expr.site .unsolved,
/* New value ("replacement expression") */
.proofStep .new, .proofStep .new .unsolved {
  background-color: #afa;
  outline: 1px solid #0d0;
}

/* Must be specific enough to override the silver/gray border. */
.proofDisplay.editable .proofStep.selected .stepAndNum {
  border: 1px solid #888;
  box-shadow: 2px 2px 2px #888;
}

/* Old value ("removed"), occurrence of variable to be substituted. */
.proofStep .old, .proofStep .occur {
  color: #0d0; /* Text color is green here rather than background. */
}

/* Scope of operation, e.g. function body to substitute into.
 * Lower priority than "new", so follows it in the file.
 */
.proofStep .scope {
  background-color: #eee;
}

/* References to a step number, where it is used as an input */
span.stepReference.referenced {
  border-color: #88F;
}

/* Indicator to click to expand step details */
.subproofExpander {
    color: #66f;
    // Increase the horizontal size to make it a bigger target.
    padding: 0 8px;
    cursor: pointer;
}

/* To prevent clicks in rapid succession from highlighting text
   or activating a double click action. */
.subproofExpander, .noselect {
  /* Including Safari-specific versions */
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  user-select: none;
}

span.assumptions {
  color: #aaa;
  margin-left: .3em;
  margin-right: .1em;
}

/* Step reference in assumptions */
span.stepRef {
  font-family: sans-serif;
  font-size: 90%;
  font-weight: bold;
  /* Should be same as in span.assumptions */
  color: #aaa;
}

/* Highlight selected expressions; a bit over-specific
   to take precedence over the hover highlight. */
.proofDisplay.editable .proofStep .expr.selected,
.proofDisplay.editable .proofStep .expr.selected .unsolved {
  background-color: hsl(200, 100%, 80%);
  outline: .5px solid #00d;
}

/* Styling for special-case names */

/* Styling for constants T and F, sans-serif roman. */
.proofStep .expr .trueFalse {
  font-family: sans-serif;
  font-size: 90%;
}

/* This puts padding on each infix operator. */
.expr.infix {
  padding: 0 .2em;
}

.expr.infix.exponent {
  font-size: 75%;
  padding: 0;
}

.expr .logicAnd, .expr .logicOr {
    font-size: 70%;
    color: #555;
    padding: 0 .2em;
}

.expr .divide {
  padding: 0 1px;
}

// Multiplicative inverse styling is superscript-like.
.expr.minv {
  position: relative;
  top: -.3em;
  font-size: 75%;
  padding: 0;
}

// Text transforms, e.g. for \u27f9 arrows.
// Width of the element is not affected by the scaling,
// so we compensate with negative margins.
//
// .expr.ximplies {
//   display: inline-block;    // Necessary for transforms
//   transform-origin: center;
//   transform: scaleX(75%);
//   margin: 0 -.15em;
// }

/* Proof step editor */

// Container for data entry forms for running inference rules
.ruleForm {
  left: -1em;
  top: -.5em;
  position: absolute;
  background-color: white;
  padding: 1em;
  border: 2px solid DarkSeaGreen;
  border-radius: 5px;
  // The rule form gets pointer events even when there is an overlay.
  pointer-events: auto;
  visibility: hidden;
  z-index: 1001;
}

// The ruleFormVisible class makes the form and the
// overlay both visible.
.proofEditor.ruleFormVisible .ruleForm {
  visibility: visible;
}

.proofEditor.ruleFormVisible .overlay {
  visibility: visible;
}

// Container for error displays
.proofEditor .proofErrors {
  position: absolute;
  background-color: white;
  left: 50%;
  max-width: 80%;
  z-index: 9;
  transform: translateX(-50%);
  padding: 4px;
  border: 2px solid DarkSeaGreen;
  border-radius: 5px;
  pointer-events: auto;
  z-index: 1002;         // This large number may be obsolete.
}

// This is intended as a more general replacement
// for proofErrors styling.  Uses flex to center.
.dialogWrapper {
  position:relative;
  width: 100%;
  display: flex;
  justify-content: center;
}

// Supports flex items within the dialog.
// Also ensures that pointer-events work.
.dialogWrapper .dialog {
  position: absolute;
  display: flex;
  background-color: white;
  z-index: 8;
  padding: 4px;
  border: 2px solid DarkSeaGreen;
  border-radius: 5px;
  pointer-events: auto;
}

.buttonYes, .buttonNo {
  font-weight: bold;
  padding: 0 1em;
  margin: 0 .3em;
}

.buttonYes {
  color: green;
}

.buttonNo {
  color: crimson;
}
/* ... */

